Fix FeaturedCard: fixed height prevents layout shift, min-h-0 fixes mobile collapse

--- a/public/preview.css
+++ b/public/preview.css
@@ -955,9 +955,6 @@
   .inline-flex {
     display: inline-flex;
   }
-  .aspect-\[4\/3\] {
-    aspect-ratio: 4/3;
-  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
@@ -979,6 +976,9 @@
   .h-80 {
     height: calc(var(--spacing) * 80);
   }
+  .h-\[340px\] {
+    height: 340px;
+  }
   .h-auto {
     height: auto;
   }
@@ -987,6 +987,9 @@
   }
   .h-px {
     height: 1px;
+  }
+  .min-h-0 {
+    min-height: calc(var(--spacing) * 0);
   }
   .min-h-\[65vh\] {
     min-height: 65vh;
@@ -1032,6 +1035,9 @@
   }
   .max-w-xs {
     max-width: var(--container-xs);
+  }
+  .flex-1 {
+    flex: 1;
   }
   .flex-shrink-0 {
     flex-shrink: 0;
@@ -1624,6 +1630,11 @@
       }
     }
   }
+  .sm\:h-\[290px\] {
+    @media (width >= 40rem) {
+      height: 290px;
+    }
+  }
   .sm\:grid-cols-2 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1723,6 +1734,11 @@
     @media (width >= 48rem) {
       font-size: var(--text-lg);
       line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .lg\:h-\[270px\] {
+    @media (width >= 64rem) {
+      height: 270px;
     }
   }
   .lg\:grid-cols-4 {
